--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fontfind"
+name = "fontfinder"
 version = "0.1.0"
 
 description = "Analyses the Unicode scripts used by strings, and locates fonts that can help display those strings."
@@ -21,11 +21,11 @@ classifiers = [
 
 [project.urls]
 # "Documentation" = ""
-"Source" = "https://github.com/multiscript/fontfind"
-"Issue Tracker" = "https://github.com/multiscript/fontfind/issues"
+"Source" = "https://github.com/multiscript/fontfinder"
+"Issue Tracker" = "https://github.com/multiscript/fontfinder/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]  
-include = ["fontfind*"]  
+include = ["fontfinder*"]  
 exclude = ["tests*"] 
 namespaces = false
