Include *.json files in package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,6 @@ where = ["src"]
 include = ["fontfinder*"]  
 exclude = ["tests*"] 
 namespaces = false
+
+[tool.setuptools.package-data]
+"fontfinder.data" = ["*.json"]
