Fix including *.json data files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,4 @@ exclude = ["tests*"]
 namespaces = false
 
 [tool.setuptools.package-data]
-"fontfinder.data" = ["*.json"]
+fontfinder = ["data/*.json"]
