--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ description = "Package for finding and installing fonts for Unicode scripts."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "platformdirs>=4.2.1",
     "requests>=2.31",
     "semver>=3.0.2",
     "unicodedataplus>=15.1.0",
