Fix entry-points typo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,5 +49,5 @@ namespaces = false
 [tool.setuptools.package-data]
 fontfinder = ["data/*.json"]
 
-[project.entry_points.pyinstaller40]
+[project.entry-points.pyinstaller40]
 hook-dirs = "fontfinder.__pyinstaller:get_hook_dirs"
