--- a/.github/workflows/pdoc_docs.yml
+++ b/.github/workflows/pdoc_docs.yml
@@ -28,7 +28,7 @@ jobs:
       - run: pip install pdoc
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
-      - run: pdoc fontfinder -o docs/
+      - run: pdoc fontfinder !fontfinder.__pyinstaller -o docs/
 
       - uses: actions/upload-pages-artifact@v3
         with:
