--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.10"
 dependencies = [
     "platformdirs>=4.2.1",
     "requests>=2.31",
-    "semver>=3.0.2",
+    "packaging>=24.1",
     "unicodedataplus>=15.1.0",
     "comtypes>=1.2.0;platform_system=='Windows'",
 ]
